Added K8s pod and service definition for running in minikube

--- a/activemq/amq-pod.yaml
+++ b/activemq/amq-pod.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: k8s-activemq-pod
+  name: activemq-pod
+  namespace: messaging
   labels:
-    app: k8s-activemq
+    app: activemq
 spec:
   containers:
-  - name: k8s-activemq-container
-    image: nikbhi15docker/k8s-active-mq
+  - name: activemq-container
+    image: chriaass/k8s-active-mq:1.0.1
