Changed default profile to use an minimally configured embedded broker. Added extbroker profile for connecting to an external broker running locally.

--- a/spring-boot-activemq/src/main/resources/application.properties
+++ b/spring-boot-activemq/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-spring.activemq.broker-url=tcp://localhost:61616
 logging.level.com.chrias=debug
+
+spring.activemq.broker-url=vm://embedded?broker.persistent=false,useShutdownHook=false
+spring.activemq.in-memorty=true
+pool.spring.activemq.non-blocking-redelivery=true
+pool.spring.activemq.packages.trust-all=false
+pool.spring.activemq.packages.trusted=com.chrias
