--- a/spring-boot-camel/src/main/resources/application.properties
+++ b/spring-boot-camel/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+logging.level.web=DEBUG
 logging.level.com.chrias=debug
 
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=testuser
 spring.activemq.password=testuserpw
+
+springfox.documentation.swagger.v2.path=/camel/api-doc
